--- a/PageTheScroll/Base.lproj/Main.storyboard
+++ b/PageTheScroll/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PageTheScroll" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,58 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sky" translatesAutoresizingMaskIntoConstraints="NO" id="hWl-4k-gyN">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sun" translatesAutoresizingMaskIntoConstraints="NO" id="du6-vx-Scv">
+                                <rect key="frame" x="255" y="28" width="104" height="92"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="92" id="4cM-cH-8re"/>
+                                    <constraint firstAttribute="width" constant="104" id="lUL-Ur-KLx"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mountains" translatesAutoresizingMaskIntoConstraints="NO" id="dd0-PZ-60U">
+                                <rect key="frame" x="0.0" y="472" width="375" height="195"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="195" id="7kp-em-Fuw"/>
+                                </constraints>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iDy-xz-Gt3">
+                                <rect key="frame" x="77.5" y="0.0" width="220" height="667"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="220" id="SHI-e9-dSK"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="hWl-4k-gyN" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ELm-fB-UcB"/>
+                            <constraint firstAttribute="trailing" secondItem="hWl-4k-gyN" secondAttribute="trailing" id="MO1-DA-kUg"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hWl-4k-gyN" secondAttribute="bottom" id="MrQ-31-6si"/>
+                            <constraint firstItem="iDy-xz-Gt3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Odq-9n-so3"/>
+                            <constraint firstItem="iDy-xz-Gt3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="S6S-jy-Egi"/>
+                            <constraint firstItem="du6-vx-Scv" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="TRm-9I-RfA"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="iDy-xz-Gt3" secondAttribute="bottom" id="X5P-Df-tdX"/>
+                            <constraint firstAttribute="trailing" secondItem="dd0-PZ-60U" secondAttribute="trailing" id="a8h-MX-W9z"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dd0-PZ-60U" secondAttribute="bottom" id="bCw-37-2nd"/>
+                            <constraint firstItem="hWl-4k-gyN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="fgf-4v-Nic"/>
+                            <constraint firstItem="dd0-PZ-60U" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hgA-HQ-cvA"/>
+                            <constraint firstItem="du6-vx-Scv" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="sC9-MP-TbM"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="iDy-xz-Gt3" id="dXG-DX-f8F"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="137.18140929535232"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Mountains" width="375" height="100"/>
+        <image name="Sky" width="375" height="667"/>
+        <image name="Sun" width="53" height="53"/>
+    </resources>
 </document>
